--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,1 +1,11 @@
-<h1>This is the Model's index page.</h1>
+<h1>All Pictures</h1>
+<% @pictures.each do |picture| %>
+  <h4><a href="/picture/<%= picture.id %>"><%= picture.title %></a></h4>
+  <img src="<%= picture.image_url %>" alt="<%= picture.title %>" height="200" width="200">
+  <p>Created At: <%= picture.created_at %></p>
+  <h5>By <%= picture.user.name %></h5>
+  <p><%= picture.description %></p>
+  
+  
+  <br><br>
+<% end %>
