--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,11 @@
-yeee
+<strong>Please log in</strong>
+<br><br>
+<form class="" action="/login" method="post">
+  <label for="email">Email: </label>
+  <input type="text" name="email" value="">
+  <label for="password">Password: </label>
+  <input type="text" name="password" value="">
+  <input type="submit" value="Login">
+</form>
+<br>
+<a href="/">Back</a>
