--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
-<h1>This is the show page for an individual instance of your model.</h1>
+<h2><%= @user.name %>'s Gallery Page</h2>
+
+<!--<h3>Email: </h3>
+<h4><%= @user.email %></h4>-->
