--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+    <div class="nav">
+      
+        <a href="/logout">Logout</a>
+        <a href="/pictures">Colouring gallery</a>
+        <a href="/picture/new">New Picture</a>
+      
+    </div>
     <div class="wrapper">
 
         <%= yield %>
