--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,1 +1,12 @@
-<h1>Insert the form to create a new instance of your model.</h1>
+<h2>Upload a new Picture: </h2>
+
+<form class="" action="/pictures" method="post">
+  <label for="title">Title:</label>
+  <input type="text" name="title">
+  <label for="name">Description:</label>
+  <input type="text" name="content">
+  <label for="name">URL:</label>
+  <input type="url" name="image_url">
+
+  <input type="submit" name="" value="Upload Picture">
+</form>
