add link to new picture page

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,7 +18,7 @@
       
         <a href="/logout">Logout</a>
         <a href="/pictures">Colouring gallery</a>
-        <a href="/picture/new">New Picture</a>
+        <a href="/pictures/new">New Picture</a>
       
     </div>
     <div class="wrapper">
