--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -4,7 +4,7 @@
   <label for="title">Title:</label>
   <input type="text" name="title">
   <label for="name">Description:</label>
-  <input type="text" name="content">
+  <input type="text" name="description">
   <label for="name">URL:</label>
   <input type="url" name="image_url">
 
