--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,1 +1,8 @@
-<h1>This is the show page for an individual instance of your model.</h1>
+
+<h3><%= @picture.title %></h3>
+<p><%= @picture.description %></p>
+<img src="<%= @picture.image_url %>" alt="<%= @picture.title %>" height="auto" width="auto">
+
+<p>Created by: <%= @picture.user.name %></p>
+
+<p>created on <%= @picture.created_at %></p>
