--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,1 +1,11 @@
-<h1>Insert the form to edit an instance of your model here.</h1>
+<form class="" action="/pictures/<%= @picture.id %>" method="post">
+  <input type="hidden" name="_method" value="patch">
+  <label for="title">Title:</label>
+  <input type="text" name="title" value ="<%= @picture.title %>">
+  <label for="description">Description:</label>
+  <textarea name="description" style="width:auto; height:auto;"><%= @picture.description %></textarea>
+  <label for="name">URL:</label>
+  <input type="url" name="image_url">
+
+  <input type="submit" name="" value="Edit Picture">
+</form>
