--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,11 +1,11 @@
 <form class="" action="/pictures/<%= @picture.id %>" method="post">
   <input type="hidden" name="_method" value="patch">
   <label for="title">Title:</label>
-  <input type="text" name="title" value ="<%= @picture.title %>">
+  <input type="text" name="title" value ="<%= @picture.title %>"><br><br>
   <label for="description">Description:</label>
-  <textarea name="description" style="width:auto; height:auto;"><%= @picture.description %></textarea>
+  <textarea name="description" style="width:auto; height:auto;"><%= @picture.description %></textarea><br><br>
   <label for="name">URL:</label>
-  <input type="url" name="image_url">
+  <input type="url" name="image_url" value="<%= @picture.image_url %>"><br><br>
 
   <input type="submit" name="" value="Edit Picture">
 </form>
