--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -3,8 +3,8 @@
 <form class="" action="/pictures" method="post">
   <label for="title">Title:</label>
   <input type="text" name="title">
-  <label for="name">Description:</label>
-  <input type="text" name="description">
+  <label for="description">Description:</label>
+  <textarea name="description" style="width:auto; height:auto;"><%= @picture.description %></textarea>
   <label for="name">URL:</label>
   <input type="url" name="image_url">
 
