--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Colouring Gallery</h1><br>
 <% @pictures.each do |picture| %>
-  <h4><a href="/picture/<%= picture.id %>"><%= picture.title %></a></h4><h5>By <%= picture.user.name %></h5>
+  <h4><a href="/pictures/<%= picture.id %>"><%= picture.title %></a></h4><h5>By <%= picture.user.name %></h5>
   <img src="<%= picture.image_url %>" alt="<%= picture.title %>" height="200" width="auto">
    <!--<p>Created At: <%= picture.created_at %></p>
    <p><%= picture.description %></p>-->
