--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
 <h2><%= @user.name %>'s Gallery Page</h2>
 
-<!--<h3>Email: </h3>
-<h4><%= @user.email %></h4>-->
+<% @user.pictures.each do |picture| %>
+<h4><a href="/pictures/<%= picture.id %>"><%= picture.title %></a></h4>
+  <img src="<%= picture.image_url %>" alt="<%= picture.title %>" height="200" width="auto">
+   <p><%= picture.description %></p>
+   <p>created on <%= picture.created_at %></p>
+  <br><br>
+<% end %>
