add navbar only if logged in

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,11 +15,11 @@
   </head>
   <body>
     <div class="nav">
-      
+      <% if logged_in? %>
         <a href="/logout">Logout</a>
         <a href="/pictures">Colouring gallery</a>
         <a href="/pictures/new">New Picture</a>
-      
+      <% end %>
     </div>
     <div class="wrapper">
 
