--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h1>Welcome to Colouring Gallery!</h1>
 
-  <a href="/login">Log In</a> OR  <a href="/signup">Sign Up</a>
+  <h3><span style="margin: 0 10px "><a href="/login" style="text-decoration: none">Log In</a></span> OR <span style="margin: 0 10px"><a href="/signup">Sign Up</a></span></h3>
 </div>
