--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,7 +13,8 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+    /*background-color: rgb(56, 200, 248);*/
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
@@ -25,7 +26,7 @@
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
     box-shadow: 0 0 10px rgba(0,0,0,.3);
     margin: 16px auto;
-    max-width: 960px;
+    max-width: 960;
     padding: 2.25%; /* 18px / 800px */
     width: 85%;
   }
@@ -36,7 +37,7 @@
   }
 
   h2 {
-    border-bottom: 2px solid #ccc;
+    /* border-bottom: 2px solid #ccc; */
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 16px;
@@ -60,6 +61,7 @@
     width: 60%; /* 480px / 800px */
   }
 
+
   .sidebar {
     background: #eee;
     border: 1px solid #ccc;
@@ -77,7 +79,7 @@
   }
 
   footer.branding {
-    border-top: 2px solid #ccc;
+    /* border-top: 2px solid #ccc; */
     margin-top: 20px;
     padding-top: 20px;
   }
@@ -111,5 +113,9 @@
   h2 {
     font-size: 18px;
     line-height: 24px;
+  }
+
+  a {
+    text-decoration: none;
   }
 }
