--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,8 +19,8 @@
       <br>
         <h4><span style="margin: 0 10px"><a href="/logout">Log Out</a></span>
         <span style="margin: 0 10px"><a href="/pictures">Colouring Gallery</a></span>
-        <span style="margin: 0 10px"><a href="/pictures/new">New Picture</a></span>
-        <span style="margin: 0 10px"><a href="/users/:id">My Pictures</a></span></h4>
+        <span style="margin: 0 10px"><a href="/pictures/new">New Picture</a></span></h4>
+        <!--<span style="margin: 0 10px"><a href="/users/show">My Pictures</a></span>-->
 
       <% end %>
     </div>
