--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,10 +17,10 @@
     <div class="nav">
       <% if logged_in? %>
       <br>
-        <h4><span style="margin: 0 10px"><a href="/logout">Log Out</a></span>
-        <span style="margin: 0 10px"><a href="/pictures">Colouring Gallery</a></span>
-        <span style="margin: 0 10px"><a href="/pictures/new">New Picture</a></span>
-        <span style="margin: 0 10px"><a href="/my_pictures">My Pictures</a></span></h4>
+        <h4><span style="margin: 0 20px; text-decoration: none"><a href="/logout">Log Out</a></span>
+        <span style="margin: 0 20px"><a href="/pictures">Colouring Gallery</a></span>
+        <span style="margin: 0 20px"><a href="/pictures/new">New Picture</a></span>
+        <span style="margin: 0 20px"><a href="/my_pictures">My Pictures</a></span></h4>
 
       <% end %>
     </div>
