--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,5 +1,9 @@
-<strong>Please sign up</strong>
-<br><br>
+
+<!--<section id="signup" class="sessions">
+<input type="submit" name="" value="Create User">-->
+<section id="login" class="sessions">
+<h2><strong>Please sign up</strong></h2>
+
 
 <form class="" action="/users" method="post">
   <label for="name">Name: </label>
@@ -8,7 +12,10 @@
   <input type="text" name="email" value="">
   <label for="password">Password: </label>
   <input type="text" name="password" value="">
-  <input type="submit" name="" value="Create User">
+  
+  <button type="submit">Create User</button>
 </form>
 <br>
-<a href="/">Back</a>
+<strong><a href="/">>>Back</a></strong>
+</section>
+
