--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,7 +1,36 @@
-<div class="container">
-  <h1>Welcome to Colouring Gallery!</h1>
 
-  <h3><span style="margin: 0 20px"><a href="/login">Log In</a></span> OR <span style="margin: 0 20px"><a href="/signup">Sign Up</a></span></h3>
-</div>
+<style>
 
-<!--style="text-decoration: none"-->
+
+h1 {
+    font-size: 56px;
+    text-align: center;
+    margin-top: 30px;
+    
+}
+
+.rainbow {
+  background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  color:transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
+.link{
+  text-align: center;
+  font-size: 25px;
+}
+</style>
+
+
+  
+    <h1><span class="rainbow">Welcome to Colouring Gallery!</span></h1>
+
+ <!--<a href="/login"><button type="submit"></a>Log in</button> OR <a href="/signup"><button type="signup">Sign Up </button></a> 
+
+style="text-decoration: none"-->
+<br><br>
+  <div class="link">
+    <h3><span style="margin: 0 30px; font-size: 27px"><a href="/login">Log In</a></span>or<span style="margin: 0 30px; font-size: 27px"><a href="/signup">Sign Up</a></span></h3>
+  </div>
