--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,3 +1,4 @@
+<!--
 <strong>Please log in</strong>
 <br><br>
 <form class="" action="/login" method="post">
@@ -9,3 +10,24 @@
 </form>
 <br>
 <a href="/">Back</a>
+-->
+
+<section id="login" class="sessions">
+ <h2><strong>Please log in</strong></h2>
+ <br>
+  <form action="/login" method="post">
+ 
+    
+    <label for="email">Email Address</label>
+    <input type="email" id="email" name="email" required>
+  
+    <label for="password">Password </label>
+    <input type="password" name="password" required>
+  
+    <button type="submit">Log In</button>
+
+    <br><br>
+<strong><a href="/">>>Back</a></strong>
+
+  </form>
+</section>
