--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,11 +1,15 @@
+<section id="edit" class="change">
+<h2>Edit Picture: </h2>
 <form class="" action="/pictures/<%= @picture.id %>" method="post">
   <input type="hidden" name="_method" value="patch">
   <label for="title">Title:</label>
-  <input type="text" name="title" value ="<%= @picture.title %>"><br><br>
+  <input type="text" name="title" value ="<%= @picture.title %>">
   <label for="description">Description:</label>
-  <textarea name="description" style="width:auto; height:auto;"><%= @picture.description %></textarea><br><br>
+  <input type="text" name="description" value="<%= @picture.description %>">
   <label for="name">URL:</label>
-  <input type="url" name="image_url" value="<%= @picture.image_url %>"><br><br>
+  <input type="url" name="image_url" value="<%= @picture.image_url %>">
 
-  <input type="submit" name="" value="Edit Picture">
+  <button type="submit">Edit Picture</button>
 </form>
+</section>
+<!--<textarea name="description" style="width:auto; height:auto;"><%= @picture.description %></textarea>-->
