--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,8 +1,62 @@
-<h1>Colouring Gallery</h1><br>
-<% @pictures.each do |picture| %>
-  <h4><a href="/pictures/<%= picture.id %>"><%= picture.title %></a></h4><h5>By <%= picture.user.name %></h5>
-  <img src="<%= picture.image_url %>" alt="<%= picture.title %>" height="200" width="auto">
-   <!--<p>Created At: <%= picture.created_at %></p>
-   <p><%= picture.description %></p>-->
-  <br><br>
-<% end %>
+<style>
+/*div.gallery {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}*/
+
+div.gallery {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  padding: 10px;
+  grid-gap: 50px;
+  margin: 0 30px;
+}
+
+
+
+.header {
+  padding: 20px;
+  text-align: center;
+  font-size: 25px;
+}
+
+
+.rainbow {
+  background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  color:transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
+p {
+
+}
+
+.gallery:hover .image {
+  opacity: 0.3;
+}
+
+</style>
+
+
+<div class="header">
+<h1><span class="rainbow">Colouring Gallery</span></h1><br>
+</div>
+<div class="gallery">
+
+    <% @pictures.each do |picture| %>
+      <p><a href="/pictures/<%= picture.id %>">By <%= picture.user.name %></a>
+      <a href="/pictures/<%= picture.id %>"><img src="<%= picture.image_url %>" alt="<%= picture.title %>" height="250" width="250"></a></p>
+      <!--<p>Created At: <%= picture.created_at %></p>
+      <p><%= picture.description %></p>
+       <h4><a href="/pictures/<%= picture.id %>"><%= picture.title %></a></h4>
+      <h5>By <%= picture.user.name %></h5>-->
+      
+      <br><br>
+    <% end %>
+
+</div>
+
