--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,13 +1,20 @@
+<section id="new" class="upload">
 <h2>Upload a new Picture: </h2>
 
 <form class="" action="/pictures" method="post">
   <label for="title">Title:</label>
   <input type="text" name="title">
   <label for="name">URL:</label>
-  <input type="url" name="image_url"><br><br>
+  <input type="url" name="image_url">
+  
   <label for="description">Description:</label>
-  <textarea name="description" style="width:auto; height:auto;"></textarea><br><br>
-  <br><br>
-
-  <input type="submit" name="" value="Upload Picture">
+  <input type="description"  name="description">
+  
+  
+  <button type="submit">Upload Picture</button>
+  
 </form>
+</section>
+
+<!--<input type="submit" name="" value="Upload Picture">
+<textarea name="description" style="width:auto; height:auto;"></textarea>-->
