--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,19 +1,31 @@
+<style>
+img {
+  float: left;
+  padding: 18px
+}
+</style>
 
-<h3><%= @picture.title %></h3>
+<section id="show" class="page">
 <br><br>
-<img src="<%= @picture.image_url %>" alt="<%= @picture.title %>" height="auto" width="auto">
-<strong> by <%= @picture.user.name %></strong>
-<p><span style="max-width:200px; word-wrap:break-word;"><%= @picture.description %></span></p>
+<p><img src="<%= @picture.image_url %>" alt="<%= @picture.title %>" height="auto" width="auto"><br>
+<!--<strong> by <%= @picture.user.name %></strong>-->
+<strong>"<%= @picture.title %>"
+by <%= @picture.user.name %></strong><br><br>
+<%= @picture.description %></p>
 <p>created on <%= @picture.formatted_created_at %></p>
 
 <% if authorized_to_edit?(@picture) %>
-<a href="/pictures/<%= @picture.id %>/edit"><input type="submit" name="" value="Edit Picture"></a>
- <br><br>
+<a href="/pictures/<%= @picture.id %>/edit"><button type="submit">Edit Picture</button></a>
+
 <form class="" action="/pictures/<%= @picture.id %>/delete" method="post">
     <!-- To turn this form submission into a DELETE request -->
     <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" name="" value="Delete Picture">
+    
+    <button type="submit">Delete Picture</button>
   </form>
 <% end %>
+</section>
+
+<!--<input type="submit" name="" value="Delete Picture">-->
 
 
