--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,16 +12,19 @@
   }
 
   /* --- Welcome Page Styles --- */
+ 
   body {
-    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+    
+    background-image: linear-gradient(red, yellow, green);
     /*background-color: rgb(56, 200, 248);*/
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
   }
 
+
   .wrapper {
-    background: #fff;
+    background: rgb(255, 251, 237);
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
     box-shadow: 0 0 10px rgba(0,0,0,.3);
@@ -29,12 +32,15 @@
     max-width: 960;
     padding: 2.25%; /* 18px / 800px */
     width: 85%;
+    border-radius: 15px;
   }
 
-  h1 {
+
+  
+  /* h1 {
     font-size: 36px;
     line-height: 54px;
-  }
+  } */
 
   h2 {
     /* border-bottom: 2px solid #ccc; */
@@ -52,29 +58,192 @@
     margin-bottom: 18px;
   }
 
+  a {
+    text-decoration: none;
+  } 
+
+
   .main {
     overflow: hidden;
   }
 
-  .content {
-    float: left;
-    width: 60%; /* 480px / 800px */
+ 
+
+  nav {
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  nav ul li {
+    display: inline-block;
+    padding: 20px 30px;
+    border-right: 1px solid #657b83;
+    font-weight: bold;
+  }
+
+  nav ul li:last-child {
+    border-right: none;
+  }
+
+  nav ul li a {
+    font-size: 1.3em;
+  }
+
+  .page button {
+    display: inline-block;
+    width: 10%;
+    border-radius: 4px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin-top: 18px;
+    font-size: 0.7em;
+    border: 0;
+    font-weight: bold;
+    background-color: #dde5f0;
+    color: rgb(50, 28, 253);
+  }
+  .change input  {
+    display: inline-block;
+    margin-bottom: 10px;
+    padding: 8px 0 8px 8px;
+    width: 20%;
+    border-radius: 4px;
+    border: 1px solid #657b83;
+    background-color: white;
+    color: black;
+  }
+
+ 
+  .change label {
+    display: inline-block;
+    margin-bottom: 8px;
+    font-size: 1em;
+  }
+
+  .change button {
+    display: inline-block;
+    width: 15%;
+    border-radius: 4px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin-top: 18px;
+    font-size: 1em;
+    font-weight: bold;
+    border: 0;
+    background-color: #0c65e9;
+    color: white;
+    
+    -webkit-transition: 0.12s all;
+    -moz-transition: 0.12s all;
+    -ms-transition: 0.12s all;
+    -o-transition: 0.12s all;
+    transition: 0.12s all;
+  }
+
+  .change textarea  {
+    display: inline-block;
+    margin-bottom: 10px;
+    padding: 8px 0 8px 8px;
+    width: 30%;
+    border-radius: 4px;
+    border: 1px solid #657b83;
+    background-color: white;
+    color: black;
+  } 
+
+  .upload input  {
+    display: inline-block;
+    margin-bottom: 10px;
+    padding: 8px 0 8px 8px;
+    width: 20%;
+    border-radius: 4px;
+    border: 1px solid #657b83;
+    background-color: white;
+    color: black;
+  }
+
+  .upload label {
+    display: inline-block;
+    margin-bottom: 8px;
+    font-size: 1em;
+  }
+
+  .upload button {
+    display: inline-block;
+    width: 15%;
+    border-radius: 4px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin-top: 18px;
+    font-size: 1em;
+    font-weight: bold;
+    border: 0;
+    background-color: #0c65e9;
+    color: white;
+    
+    -webkit-transition: 0.12s all;
+    -moz-transition: 0.12s all;
+    -ms-transition: 0.12s all;
+    -o-transition: 0.12s all;
+    transition: 0.12s all;
+  }
+
+  .upload button:hover {
+    background-color: #169ef8;
+    cursor: pointer;
   }
 
 
-  .sidebar {
-    background: #eee;
-    border: 1px solid #ccc;
-    float: right;
-    padding: 2.08333333333%; /* 5px / 240px */
-    width: 30%; /* 240px / 800px */
+  .sessions input {
+    display: inline-block;
+    margin-bottom: 10px;
+    padding: 8px 0 8px 8px;
+    width: 20%;
+    border-radius: 4px;
+    border: 1px solid #657b83;
+    background-color: inherit;
+    color: black;
   }
-
-  .sidebar ul {
-    font-size: 14px;
+  
+  .sessions label {
+    display: inline-block;
+    margin-bottom: 8px;
+    font-size: 1em;
+  }
+  
+  .sessions button {
+    display: inline-block;
+    width: 15%;
+    border-radius: 4px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin-top: 18px;
+    font-size: 1em;
+    font-weight: bold;
+    border: 0;
+    background-color: #0c65e9;
+    color: white;
+    
+    -webkit-transition: 0.12s all;
+    -moz-transition: 0.12s all;
+    -ms-transition: 0.12s all;
+    -o-transition: 0.12s all;
+    transition: 0.12s all;
+  }
+  
+  .sessions button:hover {
+    background-color: #169ef8;
+    cursor: pointer;
   }
 
   .branding {
+    
     clear: both;
   }
 
@@ -93,32 +262,7 @@
     width: auto;
   }
 
-  .content, .sidebar {
-    float: none;
-    width: 100%;
-  }
 
-  .sidebar {
-    background: transparent;
-    border: none;
-    border-top: 2px solid #ccc;
-    padding: 0;
-  }
-
-  h1 {
-    font-size: 24px;
-    line-height: 36px;
-  }
-
-  h2 {
-    font-size: 18px;
-    line-height: 24px;
-  }
-
-   a {
-    text-decoration: none;
-    
-  } 
 
   /*
     p
