--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,24 +11,25 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <link rel="stylesheet" href="/stylesheets/mmain.css" />
   </head>
   <body>
 
   <div class="container">
   
-   <header>
-            <nav>
-                <% if logged_in? %>
-                <ul>
-                    <li><a href="/logout">Log Out</a></li>
-                    <li><a href="/pictures">Colouring Gallery</a></li>
-                    <li><a href="/pictures/new">New Picture</a></li>
-                    <li><a href="/my_pictures">My Pictures</a></li>
-                </ul>
-                <% end %>
-            </nav>
-   </header>
+    <header>
+      <nav>
+        <% if logged_in? %>
+          <ul>
+            <li><a href="/logout">Log Out</a></li>
+            <li><a href="/pictures">Colouring Gallery</a></li>
+            <li><a href="/pictures/new">New Picture</a></li>
+            <li><a href="/my_pictures">My Pictures</a></li>
+          </ul>
+        <% end %>
+      </nav>    
+    
+    </header>
   
     <div class="wrapper">
       <% if flash[:message] %>
