--- a/public/stylesheets/mmain.css
+++ b/public/stylesheets/mmain.css
@@ -1,11 +1,9 @@
 @media screen {
     /* --- Reset Styles --- */
     * {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        font-family: sans-serif;
-        color: #0c2ef1;
+      list-style: none;
+      margin: 0;
+      padding: 0;
     }
   
     html, body {
@@ -14,9 +12,10 @@
     }
   
     /* --- Welcome Page Styles --- */
+   
     body {
       
-      /*background-image: linear-gradient(to left, rgb(240, 181, 181), rgb(241, 218, 175), rgb(250, 250, 192), rgb(252, 252, 208), rgb(252, 252, 219), rgb(248, 226, 186), rgb(248, 166, 166));
+      background-image: linear-gradient(red, yellow, green);
       /*background-color: rgb(56, 200, 248);*/
       color: #333;
       font-family: Sans-Serif;
@@ -24,68 +23,254 @@
     }
   
   
-      
+    .wrapper {
+      background: rgb(255, 251, 237);
+      -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
+      -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
+      box-shadow: 0 0 10px rgba(0,0,0,.3);
+      margin: 16px auto;
+      max-width: 960;
+      padding: 2.25%; /* 18px / 800px */
+      width: 85%;
+      border-radius: 15px;
+    }
   
-      
-    .container {
-        display: inline-block;
-        width: 960px;
-        margin: 0 auto;
-    }
-
-    nav {
-        text-align: center;
-        margin-top: 20px;
-    }
+  
     
-    nav ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
+    /* h1 {
+      font-size: 36px;
+      line-height: 54px;
+    } */
+  
+    h2 {
+      /* border-bottom: 2px solid #ccc; */
+      font-size: 24px;
+      line-height: 36px;
+      margin-bottom: 16px;
     }
-    
-    nav ul li {
-        display: inline-block;
-        padding: 20px 30px;
-        border-right: 1px solid #657b83;
+  
+    h3 {
+      font-size: 18px;
+      line-height: 36px;
     }
-    
-    nav ul li:last-child {
-        border-right: none;
+  
+    p {
+      margin-bottom: 18px;
     }
-    
-    nav ul li a {
-        font-size: 1.3em;
-    }
-
+  
     a {
-        text-decoration: none;
+      text-decoration: none;
     } 
-    
+  
+  
     .main {
-        overflow: hidden;
-    }
-    
-    
-    .branding {
-        
-        clear: both;
-    }
-    
-    footer.branding {
-        /* border-top: 2px solid #ccc; */
-        margin-top: 20px;
-        padding-top: 20px;
+      overflow: hidden;
     }
   
-    
-    @media screen and (max-width: 600px) {
-      .wrapper {
-        -moz-box-shadow: none;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-        width: auto;
-        }
+   
+  
+    nav {
+      text-align: center;
+      margin-top: 20px;
+    }
+  
+    nav ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+  
+    nav ul li {
+      display: inline-block;
+      padding: 20px 30px;
+      border-right: 1px solid #657b83;
+      font-weight: bold;
+    }
+  
+    nav ul li:last-child {
+      border-right: none;
+    }
+  
+    nav ul li a {
+      font-size: 1.3em;
+    }
+  
+    .page button {
+      display: inline-block;
+      width: 10%;
+      border-radius: 4px;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      margin-top: 18px;
+      font-size: 0.7em;
+      border: 0;
+      font-weight: bold;
+      background-color: #dde5f0;
+      color: rgb(50, 28, 253);
+    }
+    .change input  {
+      display: inline-block;
+      margin-bottom: 10px;
+      padding: 8px 0 8px 8px;
+      width: 20%;
+      border-radius: 4px;
+      border: 1px solid #657b83;
+      background-color: white;
+      color: black;
+    }
+  
+   
+    .change label {
+      display: inline-block;
+      margin-bottom: 8px;
+      font-size: 1em;
+    }
+  
+    .change button {
+      display: inline-block;
+      width: 15%;
+      border-radius: 4px;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      margin-top: 18px;
+      font-size: 1em;
+      font-weight: bold;
+      border: 0;
+      background-color: #0c65e9;
+      color: white;
+      
+      -webkit-transition: 0.12s all;
+      -moz-transition: 0.12s all;
+      -ms-transition: 0.12s all;
+      -o-transition: 0.12s all;
+      transition: 0.12s all;
+    }
+  
+    .change textarea  {
+      display: inline-block;
+      margin-bottom: 10px;
+      padding: 8px 0 8px 8px;
+      width: 30%;
+      border-radius: 4px;
+      border: 1px solid #657b83;
+      background-color: white;
+      color: black;
+    } 
+  
+    .upload input  {
+      display: inline-block;
+      margin-bottom: 10px;
+      padding: 8px 0 8px 8px;
+      width: 20%;
+      border-radius: 4px;
+      border: 1px solid #657b83;
+      background-color: white;
+      color: black;
+    }
+  
+    .upload label {
+      display: inline-block;
+      margin-bottom: 8px;
+      font-size: 1em;
+    }
+  
+    .upload button {
+      display: inline-block;
+      width: 15%;
+      border-radius: 4px;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      margin-top: 18px;
+      font-size: 1em;
+      font-weight: bold;
+      border: 0;
+      background-color: #0c65e9;
+      color: white;
+      
+      -webkit-transition: 0.12s all;
+      -moz-transition: 0.12s all;
+      -ms-transition: 0.12s all;
+      -o-transition: 0.12s all;
+      transition: 0.12s all;
+    }
+  
+    .upload button:hover {
+      background-color: #169ef8;
+      cursor: pointer;
+    }
+  
+  
+    .sessions input {
+      display: inline-block;
+      margin-bottom: 10px;
+      padding: 8px 0 8px 8px;
+      width: 20%;
+      border-radius: 4px;
+      border: 1px solid #657b83;
+      background-color: inherit;
+      color: black;
     }
     
-}
+    .sessions label {
+      display: inline-block;
+      margin-bottom: 8px;
+      font-size: 1em;
+    }
+    
+    .sessions button {
+      display: inline-block;
+      width: 15%;
+      border-radius: 4px;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      margin-top: 18px;
+      font-size: 1em;
+      font-weight: bold;
+      border: 0;
+      background-color: #0c65e9;
+      color: white;
+      
+      -webkit-transition: 0.12s all;
+      -moz-transition: 0.12s all;
+      -ms-transition: 0.12s all;
+      -o-transition: 0.12s all;
+      transition: 0.12s all;
+    }
+    
+    .sessions button:hover {
+      background-color: #169ef8;
+      cursor: pointer;
+    }
+  
+    .branding {
+      
+      clear: both;
+    }
+  
+    footer.branding {
+      /* border-top: 2px solid #ccc; */
+      margin-top: 20px;
+      padding-top: 20px;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .wrapper {
+      -moz-box-shadow: none;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      width: auto;
+    }
+  
+  
+  
+    /*
+      p
+    {
+        width:200px; 
+        word-wrap:break-word;
+    }*/
+    
+  }
+  
+  
