--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,10 +1,4 @@
 <style>
-/*div.gallery {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}*/
 
 div.gallery {
   display: grid;
@@ -14,14 +8,11 @@ div.gallery {
   margin: 0 30px;
 }
 
-
-
 .header {
   padding: 20px;
   text-align: center;
   font-size: 25px;
 }
-
 
 .rainbow {
   background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
@@ -31,12 +22,12 @@ div.gallery {
   background-clip: text;
 }
 
-p {
-
+img:hover {
+  opacity: 0.6;
 }
 
-.gallery:hover .image {
-  opacity: 0.3;
+.title {
+  font-weight: bold;
 }
 
 </style>
@@ -48,13 +39,8 @@ p {
 <div class="gallery">
 
     <% @pictures.each do |picture| %>
-      <p><a href="/pictures/<%= picture.id %>">By <%= picture.user.name %></a>
-      <a href="/pictures/<%= picture.id %>"><img src="<%= picture.image_url %>" alt="<%= picture.title %>" height="250" width="250"></a></p>
-      <!--<p>Created At: <%= picture.created_at %></p>
-      <p><%= picture.description %></p>
-       <h4><a href="/pictures/<%= picture.id %>"><%= picture.title %></a></h4>
-      <h5>By <%= picture.user.name %></h5>-->
-      
+     
+      <a href="/pictures/<%= picture.id %>"><img src="<%= picture.image_url %>" alt="<%= picture.title %>" title="<%= picture.title %> - by <%= picture.user.name %>" height="250" width="250"></a>
       <br><br>
     <% end %>
 
