remove comments of code

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -24,7 +24,7 @@
             <li><a href="/logout">Log Out</a></li>
             <li><a href="/pictures">Colouring Gallery</a></li>
             <li><a href="/pictures/new">New Picture</a></li>
-            <li><a href="/my_pictures">My Gallery</a></li>
+            <li><a href="/my_pictures">My Pictures</a></li>
           </ul>
         <% end %>
       </nav>    
