--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@ img:hover {
 
 </style>
 
-
+<section id="user" class="show_my_pictures">
 <div class="header">
     <h1><span class="rainbow"><%= @user.name %>'s Gallery</span></h1>
 </div>
@@ -43,4 +43,5 @@ img:hover {
     <% end %>
 
 </div>
+</section>
 
