--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,20 +1,19 @@
-
 <section id="login" class="sessions">
  <h2><strong>Please log in</strong></h2>
  <br>
   <form action="/login" method="post">
  
-    
     <label for="email">Email Address</label>
-    <input type="email" id="email" name="email" required>
+    <input type="email" id="email" name="email" value="">
   
     <label for="password">Password </label>
-    <input type="password" name="password" required>
+    <input type="password" name="password" value="">
   
     <button type="submit">Log In</button>
 
     <br><br>
-<strong><a href="/">>>Back</a></strong>
+    <strong><a href="/">>>Back</a></strong>
 
   </form>
 </section>
+
